_sass/_landing-page.scss
body, html {
    height: 100%;
    width: 100%;
}

body, h1, h2, h3, h4, h5, h6 {
    font-family: "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
}

.lead {
    font-size: 18px;
    font-weight: 400;
}

.intro-header {
    color: #f8f8f8;
    background: #005262 url(/assets/images/homepage/homepage.jpg);
    background-repeat: no-repeat;
    background-position: 0 -80px;
    background-size: cover;
    text-align: center;
    margin-top: $navbar-height-mobile;
    position: relative;
    height: 400px;

    @media (min-width: $screen-sm-min) {
        height: 400px;
    }

    @media (min-width: $screen-md-min) {
        height: 400px;
    }
}

.intro-header-content {
    position: absolute;
    top: 40px;

    @media (min-width: $screen-sm-min) {
        top: 118px;
    }
}

.intro-message {
    position: relative;
    padding-top: 10px;

    @media (min-width: $screen-md-min) {
        padding-top: 30px;
    }

    & > h1 {
        margin: 0;
        padding: 0 20px;
        font-size: 30px;
        text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.6);
        @media (min-width: $screen-sm-min) {
            font-size: 3em;
        }
    }

    & > h3 {
        text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.6);
    }
}

.body-content {
    padding-bottom: 0;
    overflow: hidden;
}

.content-section-top {
    margin: 10px 0 0;

    @media (min-width: $screen-sm-min) {
        margin: 20px 0;
    }

    .content-section-top-left a {
        color: #fff;
    }
}

.content-section-a {
    background-color: #005262;
    color: #fff;
    padding: 20px 0 50px;
    .lead, h2 {
        text-align: center;
    }
    .btn {
        color: #2b6e8b;
        background-color: #fff;
        border: none;
        margin-left: -15px;
    }
}

.content-section-b {
    background-color: #f8f8f8;
    border-top: 1px solid #e7e7e7;
    border-bottom: 1px solid #e7e7e7;
    padding: 50px 0;
}

.section-heading {
    margin-bottom: 30px;
}

.section-heading-spacer {
    border-top: 3px solid #e7e7e7;
    width: 200px;
    float: left;
}

.banner {
    padding: 100px 0;
    color: #f8f8f8;
    background-size: cover;
}

.banner h2 {
    margin: 0;
    text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.6);
    font-size: 3em;
}

.banner ul {
    margin-bottom: 0;
}

.banner-social-buttons {
    float: right;
    margin-top: 0;
}

@media (max-width: $screen-lg-min) {
    ul.banner-social-buttons {
        float: left;
        margin-top: 15px;
    }
}

@media (max-width: $screen-sm-min) {
    .banner h2 {
        margin: 0;
        text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.6);
        font-size: 3em;
    }

    ul.banner-social-buttons > li {
        display: block;
        margin-bottom: 20px;
        padding: 0;
    }

    ul.banner-social-buttons > li:last-child {
        margin-bottom: 0;
    }
}

footer {
    background-color: #f8f8f8;
    padding: 16px 0;
    padding-bottom: 8px;

    hr {
        margin-top: 5px;
        margin-bottom: 15px;
    }
}


p.copyright {
    margin: 15px 0 0;
}

